--- a/styles.css
+++ b/styles.css
@@ -55,4 +55,118 @@ input[type=number] {
 .form-control:disabled, .form-control[readonly] {
   background-color: #ffffff;
   opacity: 1;
+}body{
+  background-color: #ffff;
+}
+
+
+.container {
+  max-width: 960px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+
+.btn-primary{
+  background-color: #fff;
+}
+.btn-primary, a{
+  color: #0d6efd;
+  font-weight: bolder;
+}
+
+.input-group-text{
+  background-color:#ffff;
+  color: #0d6efd;
+  border: 1px solid #0d6efd;
+}
+
+.form-control{
+  border: 1px solid #0d6efd;
+}
+
+.form-control:disabled, .form-control[readonly] {
+  background-color: #ffffff;
+  opacity: 1;
+}body{
+  background-color: #ffff;
+}
+
+
+.container {
+  max-width: 960px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+
+.btn-primary{
+  background-color: #fff;
+}
+.btn-primary, a{
+  color: #0d6efd;
+  font-weight: bolder;
+}
+
+.input-group-text{
+  background-color:#ffff;
+  color: #0d6efd;
+  border: 1px solid #0d6efd;
+}
+
+.form-control{
+  border: 1px solid #0d6efd;
+}
+
+.form-control:disabled, .form-control[readonly] {
+  background-color: #ffffff;
+  opacity: 1;
 }
